--- a/code/platformio.ini
+++ b/code/platformio.ini
@@ -15,7 +15,9 @@ framework = arduino
 lib_deps = 
   ESP Async WebServer
   WiFi
+  ESP32Servo
 upload_port = /dev/ttyUSB0
 extra_scripts = 
-  pre:prebuild_script.py
+  prebuild_script.py
   post:postbuild_script.py
+monitor_speed = 115200
